force-app/main/default/objects/Applicant_Document__c/Applicant_Document__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>It is used for show applicant document on Booking Form</description>
    <label>Applicant Document</label>
</CustomObject>