force-app/main/default/objects/Applicant_Document__c/fields/DoctypeNo__c.field-meta.xml
<CustomField>
    <fullName>DoctypeNo__c</fullName>
    <label>DoctypeNo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>