force-app/main/default/objects/Applicant_Document__c/fields/Document_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Document_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Mandatory</label>
    <type>Checkbox</type>
</CustomField>