force-app/main/default/objects/Applicant_Document__c/fields/Residential_Status__c.field-meta.xml
<CustomField>
    <fullName>Residential_Status__c</fullName>
    <label>Residential Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>