force-app/main/default/objects/Applicant_Document__c/fields/Type_Of_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Applicant__c</fullName>
    <label>Type Of Applicant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>